# nagare

./: .clang-format  .gitignore  CMakeLists.txt
include/: nagare.h
include/nagare/: config.hpp  nagare.h  stream.hpp
include/nagare/iterator/: map_iterator.hpp
test/: CMakeLists.txt  nagare_add_test.cpp  nagare_test.cpp  stream_test.cpp
